XMLtoCSV/objects/unpackaged/objects/PCYC_ESIS_Email_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipients_List__c</fullName>
        <label>Recipients List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_To_Email__c</fullName>
        <label>Reply To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reply_To_Name__c</fullName>
        <label>Reply To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ESIS Email Settings</label>
</CustomObject>